# SoftwareRenderer

./: .gitignore  CMakeLists.txt
color/: CMakeLists.txt
color/src/color/: color.cpp  color.hpp
color/tests/: CMakeLists.txt  color_test.cpp
geometry/: CMakeLists.txt
geometry/src/geometry/: point2.cpp  point2.hpp  point3.cpp  point3.hpp  vector2.cpp  vector2.hpp  vector2.inl  vector3.cpp  vector3.hpp  vector3.inl
geometry/tests/: CMakeLists.txt  boundingbox_test.cpp  point3d_test.cpp  triangle_test.cpp  vector2_test.cpp  vector3_test.cpp
graphics/: CMakeLists.txt
graphics/src/graphics/: image.cpp  image.hpp
