add_executable(vector3_test vector3_test.cpp)
# add_executable(point3d_test point3d_test.cpp)
# add_executable(boundingbox_test boundingbox_test.cpp)
# add_executable(triangle_test triangle_test.cpp)
# add_executable(circle_test circle_test.cpp)
target_link_libraries(vector3_test PRIVATE GTest::gtest_main geometry color)
# target_link_libraries(point3d_test PRIVATE GTest::gtest_main geometry color)
# target_link_libraries(boundingbox_test PRIVATE GTest::gtest_main geometry color)
# target_link_libraries(triangle_test PRIVATE GTest::gtest_main geometry color)
# target_link_libraries(circle_test PRIVATE GTest::gtest_main geometry color)
gtest_discover_tests(vector3_test)
# gtest_discover_tests(point3d_test)
# gtest_discover_tests(boundingbox_test)
# gtest_discover_tests(triangle_test)
# gtest_discover_tests(circle_test)
